--- a/raspi/frontend/package.json
+++ b/raspi/frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jaames/iro": "^5.1.5",
+    "@radial-color-picker/vue-color-picker": "^2.3.0",
     "axios": "^0.18.1",
     "core-js": "^3.6.4",
     "reinvented-color-wheel": "^0.2.9",
