--- a/raspi/frontend/package.json
+++ b/raspi/frontend/package.json
@@ -11,6 +11,7 @@
     "@jaames/iro": "^5.1.5",
     "@radial-color-picker/vue-color-picker": "^2.3.0",
     "axios": "^0.18.1",
+    "color-convert": "^2.0.1",
     "core-js": "^3.6.4",
     "reinvented-color-wheel": "^0.2.9",
     "socket.io-client": "^2.3.0",
@@ -18,6 +19,7 @@
     "vue-color": "^2.7.1",
     "vue-range-slider": "^0.6.0",
     "vue-socket.io": "^3.0.7",
+    "vue-switches": "^2.0.1",
     "vuetify": "^2.2.20"
   },
   "devDependencies": {
