--- a/raspi/frontend/package.json
+++ b/raspi/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "led_control",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "color-convert": "^2.0.1",
     "core-js": "^3.6.4",
     "reinvented-color-wheel": "^0.2.9",
+    "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-color": "^2.7.1",
