--- a/raspi/frontend/package.json
+++ b/raspi/frontend/package.json
@@ -16,6 +16,7 @@
     "reinvented-color-wheel": "^0.2.9",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "store": "^2.0.12",
     "vue": "^2.6.11",
     "vue-color": "^2.7.1",
     "vue-range-slider": "^0.6.0",
